idea/testData/multiModuleLineMarker/actualEnumEntries/jvm/jvm.kt
package test

actual enum class <!LINE_MARKER("descr='Has declaration in common module'")!>Enum<!> {
    <!LINE_MARKER("descr='Has declaration in common module'")!>A<!>,
    <!LINE_MARKER("descr='Has declaration in common module'")!>B<!>,
    <!LINE_MARKER("descr='Has declaration in common module'")!>C<!>,
    D
}